--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 SESSION_ID= YOR SESSION ID
-OWNER_NAME= YOUR NAME
-OWNER_NUMBER= YOUR NUMBER
+OWNER_NAME= peter essoka 
+OWNER_NUMBER=679672107
 AUTO_STATUS_SEEN=true
 REJECT_CALL=false
 MODE=public
-WELCOME=false
+WELCOME=true
 AUTO_READ=false
 AUTO_TYPING=false
 AUTO_RECORDING=false
